--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ nav.scrolled {
 
 .listitem li{
     cursor:pointer;
-    
+    position:relative;
     padding:12px 8px 12px 40px;
     background:#eee;
     font-size:18px;
